<resources>
    <string name="app_name">Amore</string>
    <string name="my_name">Shaffer, Melanie 6/6/18</string>
    <string name="goodbye">Goodbye!</string>
    <string name="arrivederci">Arrivederci!</string>
    <string name="rome_desc">Roman Forum</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_name">Your Name</string>
    <string name="enter_email">Your Email Address</string>
    <string name="enter_username">Choose a Username</string>
    <string name="your_occupation">Your Occupation</string>
...
